--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <div class="capitolo_marte" style="background-color: black; width: auto; height: 600px;">
 
-        <img style="width: 500px; height: 500px; float: left; margin-right: 70px;" src="immagini/marte.jpg" alt="marte">
+        <img style="width: 500px; height: 500px; float: left; margin-right: 70px;" src="immagini/marte.JPG" alt="marte">
         <h2 id="marte" style="font-family: 'Dosis', sans-serif;text-align: center; font-size: 70px; color: white;">MARTE</h2>
         <p style="color: white; font-size: 25px;font-family: 'Dosis', sans-serif; margin-right: 20px;">Marte è un pianeta appartenente al Sistema Solare, leggermente più piccolo della Terra e visibile ai nostri occhi come un corpo di colore rossastro.
 			L’atmosfera che caratterizza Marte è molto rarefatta, è costituita da elevate percentuali di anidride carbonica e piccole quantità di vapor d’acqua ed è spesso coinvolta in grandi tempeste di polvere in cui venti fortissimi, con velocità fino 100 km/h, erodono la superficie del pianeta modificandola. La polvere che viene sollevata in queste occasioni e che rimane sospesa nell’aria è la responsabile della tipica colorazione rossastra. Le tempeste di sabbia caratterizzano principalmente i mesi autunnali e invernali. Anche Marte, come la Terra, è caratterizzato da un’alternanza di stagioni (marziane) con durate e temperature inferiori rispetto a quelle terrestri. 
