--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div class="capitolo_giove" style="background-color: black; width: auto; height: 600px;">
 
-        <img style="width: 500px; height: 500px; float: left; margin-right: 70px;" src="immagini/giove.jpg" alt="giove">
+        <img style="width: 500px; height: 500px; float: left; margin-right: 70px;" src="immagini/giove.JPG" alt="giove">
         <h2 id="giove" style="font-family: 'Dosis', sans-serif; text-align: center; font-size: 70px; color: white;" >GIOVE</h2>
         <p style="color: white; font-size: 25px;font-family: 'Dosis', sans-serif">Il più grande pianeta del Sistema Solare è Giove. Giove è caratterizzato da una massa 2,5 volte superiore rispetto a quella di tutti i nove pianeti del Sistema Solare e presenta caratteristiche molto diverse dalla Terra ma molto simili al Sole.Il “grande pianeta” è formato da uno strato esterno gassoso, costituito prevalentemente da Idrogeno ed Elio, in misura minore da metano, ammoniaca e vapor d’acqua, e da uno strato interno compatto in cui è presente idrogeno metallico ad una pressione di 3 milioni di atmosfere. L’atmosfera, lo strato più esterno, ha una particolare struttura a bande colorate chiare e scure in cui sono presenti delle macchie e dei vortici irregolari. La più conosciuta struttura atmosferica, presente al di sotto dell’equatore, è “la grande macchia rossa”, una vastissima perturbazione paragonabile ad un ciclone che interessa un’area più estesa della superficie terrestre.
 		</p>
